<resources>
    <string name="app_name">Sae</string>
    <string name="home">Home</string>
    <string name="area">Área</string>
    <string name="product">Produto</string>
    <string name="business">Empresa</string>
    <string name="name_company">Nome da Empresa</string>
    <string name="btn_salvar">Salvar</string>

    <!--messages-->
    <string name="msg_erro_obrigatorio">Campo Obrigatório</string>
    <string name="title_company">Opa, vamos criar uma nova fábrica?!</string>
    <string name="empty_list">Nenhum item cadastrado</string>

    <!--area-->
    <string name="title_area">Opa, vamos criar uma nova área?!</string>
    <string name="name_area">Nome da Àrea</string>

    <!--product-->
    <string name="title_product">Opa, vamos criar um novo produto?!</string>
    <string name="name_product">Nome do Produto</string>

    <!--problem-->
    <string name="title_problem">Opa, vamos relatar o problema?!</string>
    <string name="name_problem">Titulo do problema</string>
    <string name="select_area_problem">Selecione uma área</string>
    <string name="select_product_problem">Selecione o produto</string>
    <string name="desc_problem">Descrição do Problema</string>

</resources>
