<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_info_problem"
                android:layout_width="326dp"
                android:layout_height="114dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/title_problem"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/name_problem_form_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/name_problem_form_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="170dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_input"
                android:hint="@string/name_problem"
                android:inputType="textAutoComplete"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_info_problem"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Spinner Dropdown -->
            <Spinner
                android:id="@+id/selected_area"
                android:layout_width="375dp"
                android:layout_height="51dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="15dp"
                android:prompt="@string/select_area_problem"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_problem_form_id" />

            <Spinner
                android:id="@+id/selected_product"
                android:layout_width="375dp"
                android:layout_height="51dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:padding="15dp"
                android:prompt="@string/select_product_problem"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selected_area" />

            <ImageButton
                android:id="@+id/button_take_photo"
                android:layout_width="60dp"
                android:layout_height="51dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:background="@color/blue_primary_dark"
                android:src="@android:drawable/ic_menu_camera"
                android:text="Foto do Problema"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selected_product" />

            <ImageView
                android:id="@+id/image_problem"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/button_take_photo"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/selected_product" />

            <ScrollView
                android:id="@+id/desc_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.609"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_take_photo">

                <EditText
                    android:id="@+id/desc_problem_id"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/custom_input"
                    android:hint="@string/desc_problem"
                    android:inputType="text|textMultiLine"
                    android:scrollbars="vertical"
                    android:padding="15dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </ScrollView>


            <Button
                android:id="@+id/btn_save_form_problem"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/custom_button"
                android:padding="15dp"
                android:text="@string/btn_salvar"
                android:textColor="@android:color/background_light"
                android:textSize="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_scroll_view" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>